components/example/demoapp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ibm-app-gateway-demo
spec:
  selector:
    matchLabels:
      app: demo-app
  replicas: 1
  template:
    metadata:
      name: demo-app
      labels:
        app: demo-app
    spec:
      containers:
        - name: demo-app
          image: icr.io/ibmappgateway/ibm-application-gateway-demo-resourceserver:23.04
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 2
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 2
            periodSeconds: 10
